settings-ui: Align tab toggler correctly in streams and groups UI.
This commit updates the left margin for the tab toggler in
streams and groups UI to be equal to the margin for the content
below so that they align correctly.

--- a/web/styles/subscriptions.css
+++ b/web/styles/subscriptions.css
@@ -1005,7 +1005,7 @@ h4.user_group_setting_subsection_title {
     .stream_settings_header {
         white-space: nowrap;
         display: flex;
-        margin-left: 15px;
+        margin-left: 18px;
 
         .tab-container {
             .tab-switcher {
